--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -55,11 +55,11 @@ jobs:
       - name: Login via Az module
         uses: azure/login@v1
         with:
-          #client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          #tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          #subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          #enable-AzPSSession: true
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          enable-AzPSSession: true
+          #creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: data-factory-deploy
         uses: Azure/data-factory-deploy-action@v1.2.0
