--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -27,15 +27,15 @@ jobs:
     - name: Validate
       run: npm run build validate ${{github.workspace}}/ADFroot/ /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/${{ secrets.RESOURCE_GROUP }}/providers/Microsoft.DataFactory/factories/${{ secrets.DEVADF_NAME }} # (2) The validate command needs the root folder location of your repository where all the objects are stored. And the 2nd parameter is the resourceID of the ADF instance 
       working-directory: ${{github.workspace}}/ADFroot/build
-      env:
-          BLOB_CONNECTION_STRING: ${{ secrets.BLOB_CONNECTION_STRING }}
+      #env:
+          #BLOB_CONNECTION_STRING: ${{ secrets.BLOB_CONNECTION_STRING }}
 
 
     - name: Validate and Generate ARM template
       run: npm run build export ${{github.workspace}}/ADFroot/ /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/${{ secrets.RESOURCE_GROUP }}/providers/Microsoft.DataFactory/factories/${{ secrets.DEVADF_NAME }} "ExportedArmTemplate"  # (3) The build command, as validate, needs the root folder location of your repository where all the objects are stored. And the 2nd parameter is the resourceID of the ADF instance. The 3rd parameter is the exported ARM template artifact name 
       working-directory: ${{github.workspace}}/ADFroot/build
-      env:
-          BLOB_CONNECTION_STRING: ${{ secrets.BLOB_CONNECTION_STRING }}
+      #env:
+          #BLOB_CONNECTION_STRING: ${{ secrets.BLOB_CONNECTION_STRING }}
 
 # In order to leverage the artifact in another job, we need to upload it with the upload action 
     - name: upload artifact
@@ -71,7 +71,7 @@ jobs:
         with:
           resourceGroupName: ${{ secrets.RESOURCE_GROUP }} # (6) your target ADF resource group name
           dataFactoryName: ${{ secrets.QAADF_NAME }} # (7) your target ADF name
-          blobConnectionString: ${{ secrets.BLOB_CONNECTION_STRING }}
-          #armTemplateFile: # (8) ARM template file name ARMTemplateForFactory.json
-          #armTemplateParametersFile: # (9) ARM template parameters file name ARMTemplateParametersForFactory.json
+          #blobConnectionString: ${{ secrets.BLOB_CONNECTION_STRING }}
+          armTemplateFile: ADFroot/arm_templates/ARMTemplateForFactory.json # (8) ARM template file name ARMTemplateForFactory.json
+          armTemplateParametersFile: ADFroot/arm_templates/ARMTemplateParametersForFactory.json # (9) ARM template parameters file name ARMTemplateParametersForFactory.json
           #additionalParameters: # (10) Parameters which will be replaced in the ARM template. Expected format 'key1=value key2=value keyN=value'. At the minimum here you should provide the target ADF name parameter. Check the ARMTemplateParametersForFactory.json file for all the parameters that are expected in your scenario
