--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -75,6 +75,6 @@ jobs:
           resourceGroupName: ${{ secrets.RESOURCE_GROUP }} # (6) your target ADF resource group name
           dataFactoryName: ${{ secrets.QAADF_NAME }} # (7) your target ADF name
           #blobConnectionString: ${{ secrets.BLOB_CONNECTION_STRING }}
-          armTemplateFile: arm_templates/ARMTemplateForFactory.json # (8) ARM template file name ARMTemplateForFactory.json
-          armTemplateParametersFile: arm_templates/ARMTemplateParametersForFactory.json # (9) ARM template parameters file name ARMTemplateParametersForFactory.json
+          armTemplateFile: ${{github.workspace}}/arm_templates/ARMTemplateForFactory.json # (8) ARM template file name ARMTemplateForFactory.json
+          armTemplateParametersFile: ${{github.workspace}}/arm_templates/ARMTemplateParametersForFactory.json # (9) ARM template parameters file name ARMTemplateParametersForFactory.json
           additionalParameters: 'factoryName: qadatafactorydemo2 LinkedService_devstr_connectionString: ${{ secrets.BLOB_CONNECTION_STRING }}' # (10) Parameters which will be replaced in the ARM template. Expected format 'key1=value key2=value keyN=value'. At the minimum here you should provide the target ADF name parameter. Check the ARMTemplateParametersForFactory.json file for all the parameters that are expected in your scenario
