--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -39,6 +39,10 @@ jobs:
       working-directory: ${{github.workspace}}/ADFroot/build
       #env:
           #BLOB_CONNECTION_STRING: ${{ secrets.BLOB_CONNECTION_STRING }}
+    - name: View GitHub Workspace
+      run: |
+          echo "Contents of GitHub Workspace:"
+          ls -R ${{ github.workspace }}
 
 # In order to leverage the artifact in another job, we need to upload it with the upload action 
     - name: upload artifact
